--- a/index.html
+++ b/index.html
@@ -18,18 +18,32 @@
           </h2>
         </header>
         <div class="text-center p-4">
-          <p class="card-body">
-            When we hit the 'Click Me' button, we see a list of the last 5
-            GitHub issues from the IBM 'clai' repo. This content is dynamically
-            generated using the response we get from the API request!
-          </p>
-          <button class="btn btn-danger" id="fetch-button">
-            Click Me
-          </button>
+          <p class="card-body"></p>
+
+          <form>
+            <label for="cityName">Enter city name:</label>
+            <input type="text" id="cityName" name="cityName">
+            <button type="submit" id="submitBtn">Search</button>
+          </form>
+         
         </div>
-        <div class="container" id="issues"></div>
+        <div class="container" id="current"></div>
       </section>
     </main>
-    <script src="./assets/script.js"></script>
+
+    <main1 class="flex-row justify-center align-center col-auto p-4 bg-light">
+      <section class="card card-rounded col-7 bg-white">
+        <header class="card-header text-center">
+          <h2 class="text-white"></h2>
+        </header>
+        <div class="text-center p-4">
+          <p class="card-body"></p>
+
+        </div>
+        <div class="container" id="next1"></div>
+      </section>
+    </main1>
+
+    <script src="./assets/script2.js"></script>
   </body>
 </html>
