--- a/index.html
+++ b/index.html
@@ -44,6 +44,26 @@
       </section>
     </main1>
 
+    <main2 class="flex-row justify-center align-center col-auto p-4 bg-light">
+      <section class="card card-rounded col-7 bg-white">
+        <header class="card-header text-center">
+          <h2 class="text-white"></h2>
+        </header>
+        <div class="text-center p-4">
+          <p class="card-body"></p>
+
+          <form>
+            <label for="cityName1">Enter city name:</label>
+            <input type="text" id="cityName1" name="cityName1">
+            <button type="submit" id="submitBtn1">Search</button>
+          </form>
+
+        </div>
+        <div class="container" id="next2"></div>
+      </section>
+    </main2>
+
+
     <script src="./assets/script2.js"></script>
   </body>
 </html>
