--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <input type="text" id="cityName" name="cityName">
             <button type="submit" id="submitBtn">Search</button>
           </form>
-         
+          <div id="search-history"></div>
         </div>
         <div class="container" id="current"></div>
       </section>
@@ -44,7 +44,7 @@
       </section>
     </main1>
 
-    <main2 class="flex-row justify-center align-center col-auto p-4 bg-light">
+    <!-- <main2 class="flex-row justify-center align-center col-auto p-4 bg-light">
       <section class="card card-rounded col-7 bg-white">
         <header class="card-header text-center">
           <h2 class="text-white"></h2>
@@ -55,13 +55,14 @@
           <form>
             <label for="cityName1">Enter city name:</label>
             <input type="text" id="cityName1" name="cityName1">
-            <button type="submit" id="submitBtn1">Search</button>
+            <button type="submit" id="submitBtn">Search</button>
           </form>
-
+          <div id="search-history"></div>
         </div>
         <div class="container" id="next2"></div>
+
       </section>
-    </main2>
+    </main2> -->
 
 
     <script src="./assets/script2.js"></script>
