--- a/index.html
+++ b/index.html
@@ -3,19 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dynamically Generated Elements</title>
+    <title>Weather Dashboard</title>
     <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body class="min-100-vh flex-column">
     <header class="p-5 text-center text-white bg-primary">
-      <h1>Server-Side APIs</h1>
+      <h1>Weather Dashboard</h1>
     </header>
     <main class="flex-row justify-center align-center col-auto p-4 bg-light">
       <section class="card card-rounded col-7 bg-white">
         <header class="card-header text-center">
-          <h2 class="text-white">
-            Dynamically Generated Elements
-          </h2>
+          <h2 class="text-white">         </h2>
         </header>
         <div class="text-center p-4">
           <p class="card-body"></p>
