--- a/index.html
+++ b/index.html
@@ -5,18 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Dashboard</title>
     <link rel="stylesheet" href="./assets/style.css" />
+
+    <script
+    src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+    integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
+    crossorigin="anonymous"
+  ></script>
+  <script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"
+></script>
+
   </head>
   <body class="min-100-vh flex-column">
     <header class="p-5 text-center text-white bg-primary">
       <h1>Weather Dashboard</h1>
     </header>
+    <div class=" total">
     <main class="flex-row justify-center align-center col-auto p-4 bg-light">
-      <section class="card card-rounded col-7 bg-white">
+      <section class="card card-rounded bg-white">
         <header class="card-header text-center">
-          <h2 class="text-white">         </h2>
+          <h2 class="text-white">Current Day Forecast</h2>
         </header>
         <div class="text-center p-4">
-          <p class="card-body"></p>
+        
 
           <form>
             <label for="cityName">Enter city name:</label>
@@ -29,18 +42,16 @@
       </section>
     </main>
 
-    <main1 class="flex-row justify-center align-center col-auto p-4 bg-light">
-      <section class="card card-rounded col-7 bg-white">
+    <main1 class="flex-row justify-center align-center p-4 bg-light">
+      <section class="card card-rounded bg-white style="width: 700px; height: 300px >
         <header class="card-header text-center">
-          <h2 class="text-white"></h2>
+          <h2 class="text-white">5 Days Forecast</h2>
         </header>
-        <div class="text-center p-4">
-          <p class="card-body"></p>
-
-        </div>
+        
         <div class="container" id="next1"></div>
       </section>
     </main1>
+  </div>
 
     <!-- <main2 class="flex-row justify-center align-center col-auto p-4 bg-light">
       <section class="card card-rounded col-7 bg-white">
